# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt"
version = "0.2.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safe interop between Rust and Qt"
repository = "https://github.com/KDAB/cxx-qt/"
homepage = "https://kdab.github.io/cxx-qt/book/"
readme = "README.md"
keywords = ["cxx", "ffi", "QML", "Qt"]
categories = ["api-bindings", "gui"]

[lib]
proc-macro = true

[dependencies]
cxx-qt-gen = { path = "../cxx-qt-gen", version = "0.2" }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
