# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

add_subdirectory(qml_extension_plugin)
add_subdirectory(qml_features)
add_subdirectory(qml_minimal)
add_subdirectory(qml_with_threaded_logic)
