# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "qt-build"
version = "0.3.0"
edition = "2018"
authors = ["Be Wilson <be.wilson@kdab.com>"]
license = "MIT OR Apache-2.0"
description = "Build script helper for linking Qt libraries and using moc code generator. Intended to be used together with cc, cpp_build, or cxx_build"
repository = "https://github.com/KDAB/cxx-qt/"

[dependencies]
versions = "4.1.0"
pkg-config = { git = "https://github.com/Be-ing/pkg-config-rs.git", branch = "library_pub" }
regex = "1.6.0"
lazy_static = "1.0"
thiserror = "1.0"
