# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-build"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Helpers for integrating `cxx-qt` crate into a Cargo build"
repository.workspace = true

[dependencies]
cc = "1.0.73"
cxx-gen = "0.7"
cxx-qt-lib-headers = { path = "../cxx-qt-lib-headers", version = "0.4" }
cxx-qt-gen = { path = "../cxx-qt-gen", version = "0.4" }
proc-macro2 = "1.0"
quote = "1.0"
convert_case = "0.6"
qt-build-utils = { path = "../qt-build-utils", version = "0.4" }
