# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-build"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Helpers for integrating `cxx-qt` crate into a Cargo build"
repository.workspace = true
rust-version.workspace = true

[dependencies]
cc.workspace = true
cxx-gen.workspace = true
cxx-qt-gen.workspace = true
proc-macro2.workspace = true
quote.workspace = true
qt-build-utils = { workspace = true, features = ["serde"] }
codespan-reporting = "0.11"
serde.workspace = true
serde_json = "1.0"

[features]
link_qt_object_files = ["qt-build-utils/link_qt_object_files"]

[lints]
workspace = true
