# SPDX-FileCopyrightText: 2024 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Laurent Montel <laurent.montel@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib-extras-headers"
version.workspace = true
authors = ["Laurent Montel <laurent.montel@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "A small crate for cxx-qt-lib-extras to share cxx-qt-lib's C++ headers"
repository.workspace = true

[features]
default = []
qt_gui = []
qt_qml = []

[dependencies]
cxx-qt-build.workspace = true
