# SPDX-FileCopyrightText: 2024 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Laurent Montel <laurent.montel@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib-extras"
version.workspace = true
authors = ["Laurent Montel <laurent.montel@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Extra Qt types for integrating `cxx-qt` crate with `cxx` that are not available in `cxx-qt-lib`"
repository.workspace = true
links = "cxx-qt-lib-extras"
rust-version.workspace = true

[dependencies]
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["qt_full"] }

[build-dependencies]
cxx-qt-build.workspace = true

[features]
default = []
link_qt_object_files = ["cxx-qt-build/link_qt_object_files"]

[lints]
workspace = true
