# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib-headers"
version = "0.4.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Be Wilson <be.wilson@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A small crate for cxx-qt-lib and cxx-qt-build to share cxx-qt-lib's C++ headers"
repository = "https://github.com/KDAB/cxx-qt/"
