# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib-headers"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Be Wilson <be.wilson@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "A small crate for cxx-qt-lib and cxx-qt-build to share cxx-qt-lib's C++ headers"
repository.workspace = true

[features]
default = []
qt_gui = ["cxx-qt-build/qt_gui"]
qt_qml = ["cxx-qt-build/qt_qml"]

[dependencies]
cxx-qt-build.workspace = true
