# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Qt types for integrating `cxx-qt` crate with `cxx`"
repository.workspace = true
# Fake linking so that we expose cargo data as env vars for downstream crates
# https://github.com/rust-lang/cargo/issues/3544
links = "cxx-qt-lib"

[dependencies]
cxx.workspace = true
bytes = { version = "1.4", optional = true }
chrono = { version = "0.4.23", optional = true }
http = { version = "0.2", optional = true }
rgb = { version = "0.8", optional = true }
time = { version = "0.3.20", optional = true }
url = { version = "2.3", optional = true }

[build-dependencies]
cxx-build.workspace = true
cxx-qt-lib-headers.workspace = true
qt-build-utils.workspace = true

[features]
default = ["qt_gui", "qt_qml"]
bytes = ["dep:bytes"]
chrono = ["dep:chrono"]
http = ["dep:http"]
rgb = ["dep:rgb"]
qt_gui = ["cxx-qt-lib-headers/qt_gui"]
qt_qml = ["cxx-qt-lib-headers/qt_qml"]
time = ["dep:time"]
url = ["dep:url"]
