# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Qt types for integrating `cxx-qt` crate with `cxx`"
repository.workspace = true
exclude = [ "**/generate.sh" ]

# When creating a library with cxx-qt-build, we need to set a fake "links" key
# to make sure the build scripts are run in the correct order and the build scripts
# can pass metadata from library to dependent.
# See also: https://doc.rust-lang.org/cargo/reference/build-scripts.html#the-links-manifest-key
links = "cxx-qt-lib"
rust-version = "1.77.2"

[dependencies]
cxx.workspace = true
cxx-qt.workspace = true
bytes = { version = "1.4", optional = true }
chrono = { version = "0.4.27", optional = true }
http = { version = "1.0", optional = true }
rgb = { version = "0.8", optional = true }
time = { version = "0.3.20", optional = true }
url = { version = "2.3", optional = true }
serde = { version = "1", features=["derive"], optional = true }

[build-dependencies]
cxx-qt-build.workspace = true
qt-build-utils.workspace = true

[features]
full = ["qt_full", "serde", "url", "time", "rgb", "http", "chrono", "bytes"]
default = []

qt_full = ["qt_gui", "qt_qml", "qt_quickcontrols"]
qt_gui = []
qt_qml = []
qt_quickcontrols = []

bytes = ["dep:bytes"]
chrono = ["dep:chrono"]
http = ["dep:http"]
rgb = ["dep:rgb"]
time = ["dep:time"]
url = ["dep:url"]
serde = ["dep:serde"]
link_qt_object_files = ["cxx-qt-build/link_qt_object_files"]

[lints]
workspace = true
