# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt"
version.workspace = true
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition.workspace = true
license.workspace = true
description = "Safe interop between Rust and Qt"
repository.workspace = true
homepage = "https://kdab.github.io/cxx-qt/book/"
readme = "README.md"
keywords = ["cxx", "ffi", "QML", "Qt"]
categories = ["api-bindings", "gui"]

[lib]
proc-macro = true

[dependencies]
cxx-qt-gen.workspace = true
proc-macro2.workspace = true
syn.workspace = true
