# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "qt-build-utils"
version.workspace = true
edition.workspace = true
authors = ["Be Wilson <be.wilson@kdab.com>"]
license.workspace = true
description = "Build script helper for linking Qt libraries and using moc code generator. Intended to be used together with cc, cpp_build, or cxx_build"
repository.workspace = true

[dependencies]
versions = "4.1.0"
thiserror = "1.0"
