# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Be Wilson <be.wilson@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "qt-build-utils"
version.workspace = true
edition.workspace = true
authors = ["Be Wilson <be.wilson@kdab.com>"]
license.workspace = true
description = "Build script helper for linking Qt libraries and using moc code generator. Intended to be used together with cc, cpp_build, or cxx_build"
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
cc.workspace = true
semver.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
# TODO: should we default to qmake or let downstream crates specify, such as cxx-qt-build
default = ["qmake"]
# When Cargo links an executable, whether a bin crate or test executable,
# and Qt 6 is linked statically, this feature must be enabled to link
# unarchived .o files with static symbols that Qt ships (for example
# to initialize Qt resources embedded within Qt libraries).
#
# CMake also links those .o files when linking Qt's targets, so this
# feature must be disabled for staticlib crates. Otherwise, linking
# will fail with duplicate symbol errors.
#
# When linking Qt dynamically, this makes no difference.
link_qt_object_files = []
qmake = []
serde = ["dep:serde"]

[lints]
workspace = true
