[package]
name = "example-basic-cxx-qt"
version = "0.1.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>"]
edition = "2018"

# Don't touch this, the CMake file expects a static lib with a specific name
[lib]
name = "rust"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
cxx-qt = { path = "../../cxx-qt" }

[build-dependencies]
clang-format = { path = "../../clang-format" }
cxx-qt-build = { path = "../../cxx-qt-build" }
