# SPDX-FileCopyrightText: 2022 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "qml-minimal-no-cmake"
# ANCHOR: book_cargo_toml_no_cmake
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ANCHOR_END: book_cargo_toml_no_cmake
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["full"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { workspace = true, features = [ "link_qt_object_files" ] }

# Enable qt_minimal feature in qt-build-utils and specify a qt-version
# this allows for automatically downloading Qt when not found with qmake
qt-build-utils = { workspace = true, features = ["qt_minimal"] }
# NOTE: this prevents any project within the workspace from picking less than 6.2 automatically
qt-version = { version = "0.1.3", default-features = false, features = ["qt_version_at_least_6_2"] }
